✨ (Dashboard.jsx): Add new components and functionality to the Dashboard component for displaying data in a more structured and visually appealing way 📝 (DataTable.jsx): Update DataTable component to include a dark theme for better visibility 📝 (Search.jsx): Update Search component to include a dark theme for better visibility 🔧 (card.jsx): Add new card component with header, title, description, content, and footer for consistent UI design 🔧 (skeleton.jsx): Add skeleton component for loading state visualization 🔧 (index.css): Update CSS to include a fixed background attachment and adjust border color for all elements 🔧 (tailwind.config.js): Add a new secondary accent color variable to the Tailwind CSS configuration for consistent theming

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body,
 html {
   background-color: #171923;
   background: linear-gradient(to bottom, #040720, #050a14);
+  background-attachment: fixed;
   color: hsl(var(--foreground));
   width: 100vw;
   height: 100vh;
@@ -16,6 +17,10 @@ html {
   font-size: 17px;
   font-weight: 400;
   letter-spacing: -0.05em;
+}
+
+* {
+  border-color: hsl(var(--border)) !important;
 }
 
 #root {
@@ -66,6 +71,7 @@ li, ul, ol, form, select, textarea {
     --input: 214.3 31.8% 91.4%;
     --ring: 221.2 83.2% 53.3%;
     --radius: 0.5rem;
+    --secondary-accent: 51 100% 50%;
   }
 
   .dark {
@@ -75,8 +81,8 @@ li, ul, ol, form, select, textarea {
     --card-foreground: 210 40% 98%;
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
-    --primary: 217.2 91.2% 59.8%;
-    --primary-foreground: 222.2 47.4% 11.2%;
+    --primary: 223 61% 32%;
+    --primary-foreground: 210 40% 98%;
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
     --muted: 217.2 32.6% 17.5%;
@@ -88,5 +94,6 @@ li, ul, ol, form, select, textarea {
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 224.3 76.3% 48%;
+    --secondary-accent: 51 100% 50%;
   }
 }
